force-app/main/default/objects/Project__c/fields/files_path_c__c.field-meta.xml
<CustomField>
    <fullName>files_path_c__c</fullName>
    <label>files_path__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>