force-app/main/default/objects/Project__c/fields/Is_Effective__c.field-meta.xml
<CustomField>
    <fullName>Is_Effective__c</fullName>
    <formula>AND(ISPICKVAL(Status__c,   &apos;Active&apos;), TODAY() &gt;=Start_Date__c ,  IF(ISNULL(End_Date__c), true, (TODAY() &lt;= End_Date__c ) )    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Effective</label>
    <type>Checkbox</type>
</CustomField>