force-app/main/default/objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RH_Role__c</field>
            <operation>equals</operation>
            <value>CEO, Team Leader</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Manager</relationshipLabel>
    <relationshipName>Projects_Leaded</relationshipName>
    <type>Lookup</type>
</CustomField>