force-app/main/default/objects/Project__c/fields/RH_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>RH_Account_ID__c</fullName>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>projects</relationshipLabel>
    <relationshipName>projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>