force-app/main/default/objects/Project__c/recordTypes/Real_Project.recordType-meta.xml
<RecordType>
    <fullName>Real_Project</fullName>
    <active>true</active>
    <label>Real Project</label>
</RecordType>