force-app/main/default/objects/Project__c/recordTypes/RH_EXTRA.recordType-meta.xml
<RecordType>
    <fullName>RH_EXTRA</fullName>
    <active>true</active>
    <description>Extra time projects</description>
    <label>EXTRA</label>
</RecordType>