force-app/main/default/objects/Project__c/recordTypes/RH_FREE.recordType-meta.xml
<RecordType>
    <fullName>RH_FREE</fullName>
    <active>true</active>
    <description>recordtype for free days, holidays...</description>
    <label>Vaccation</label>
</RecordType>